WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274307
WebProcess sends redundant information when establishing GPU process connection
https://bugs.webkit.org/show_bug.cgi?id=274307
Summary
WebProcess sends redundant information when establishing GPU process connection
Kimmo Kinnunen
Reported
2024-05-17 04:51:14 PDT
WebProcess sends redundant information when establishing GPU process connection
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-17 04:51:26 PDT
<
rdar://problem/128265618
>
Kimmo Kinnunen
Comment 2
2024-05-17 05:20:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28704
EWS
Comment 3
2024-05-24 01:19:57 PDT
Committed
279259@main
(c42e0209c0ba): <
https://commits.webkit.org/279259@main
> Reviewed commits have been landed. Closing PR #28704 and removing active labels.
Ryan Haddad
Comment 4
2024-05-24 10:36:20 PDT
Reopened Bugzilla. iOS debug layout tests exiting early due to assertion failure, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=274661
.
Kimmo Kinnunen
Comment 5
2024-05-27 01:24:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29141
EWS
Comment 6
2024-05-29 04:40:23 PDT
Committed
279438@main
(4420d02e593d): <
https://commits.webkit.org/279438@main
> Reviewed commits have been landed. Closing PR #29141 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug