Web process sends redundant information when establishing GPU process connection https://bugs.webkit.org/show_bug.cgi?id=274307 rdar://128265618

Reviewed by Chris Dumez.

Web process would send
 - the process identity for resource attribution
 - settings object

The settings were previously changled to be filled by the privileged
UI process. Remove this altogether, as it's insecure to let the WP
select anything here.

The process identity does not change once the WP is created. Thus
send this during WP initialization.

Moves the WebProcessProxy message sends to the WebProcessProxy.

* Source/WebKit/Scripts/webkit/messages.py:
(types_that_must_be_moved):
* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createGPUProcessConnection):
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::initializeIdentity):
(WebKit::WebProcessProxy::createGPUProcessConnection):
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.messages.in:
* Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::create):
(WebKit::getGPUProcessConnectionParameters): Deleted.
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):

Canonical link: https://commits.webkit.org/279259@main